# fuzzy_control_vacuum_gripper

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: types.h
src/simulation/: fuzzy_controller.cpp  fuzzy_controller.h  gripper.cpp  gripper.h  motor.cpp  motor.h  pd_controller.h  physics.cpp  physics.h
src/ui/: app.cpp  app.h  dashboard.cpp  dashboard.h  plots.cpp  plots.h  visuals.cpp  visuals.h
